--- a/src/scss/brand/components/bottom-boxes/_index.scss
+++ b/src/scss/brand/components/bottom-boxes/_index.scss
@@ -3,7 +3,7 @@
     background-color: $color-primary;
     position: relative;
     padding: 2rem 1.5rem;
-    @include sd {
+    @media only screen and (min-width: 992px) {
       position: absolute;
       bottom: 0;
       right: 0;
