--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -119,7 +119,7 @@
     left: 0;
     z-index: 1;
   }
-  .card-image-with-link {
+  .image {
     &:after {
       filter: grayscale(100) contrast(100) invert(1);
     }
@@ -127,7 +127,7 @@
 }
 
 .full-clickable-box:focus-within {
-  .card-image-with-link {
+  .image {
     &:after {
       outline: 2px solid $color-2;
     }
