--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -227,7 +227,7 @@ a[style*='visibility:hidden'] {
   }
 }
 .m-auto{
-  margin: auto;
+  margin: auto !important;
 }
 .p-m-x-1-5 {
   padding-left: 1.5rem !important;
