--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -106,8 +106,11 @@ header {
               content: '\e91a';
               font-family: 'icomoon';
               position: absolute;
-              top: 1px;
+              top: -1px;
               left: 5.5rem;
+              @include sm {
+                top: -3px;
+              }
               @include md {
                 left: 4.5rem;
                 font-size: 18px;
@@ -137,7 +140,7 @@ header {
               font-family: 'icomoon';
               position: absolute;
               right: 1px;
-              top: -3px;
+              top: -4px;
               left: 6.2rem;
               @include md {
                 left: 5.2rem;
@@ -416,15 +419,10 @@ header {
         }
       }
       button {
-        content: '\f0d1';
-        font-family: 'icomoon';
-        position: relative;
-        width: 24px !important;
-        height: 24px !important;
-        background-size: 24px !important;
         top: 12px !important;
         right: 2rem !important;
         position: fixed;
+        background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/search-line.svg');
         @include md {
           right: -4px !important;
           top: 0px !important;
@@ -432,7 +430,6 @@ header {
           height: 18px !important;
           background-size: 18px !important;
           position: relative;
-          background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/search-line.svg');
         }
         @include sd {
           top: 7px !important;
